<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextEntrantName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entrant_profile_full_name_hint"
            android:importantForAutofill="yes"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextEntrantEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/entrant_profile_email_hint"
            android:importantForAutofill="yes"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextEntrantPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/entrant_profile_phone_hint"
            android:importantForAutofill="yes"
            android:inputType="phone" />

        <Button
            android:id="@+id/buttonSaveProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/entrant_profile_save_button" />

        <Button
            android:id="@+id/buttonUpdateProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/entrant_profile_update_button" />

        <Button
            android:id="@+id/buttonDeleteProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/entrant_profile_delete_button" />
    </LinearLayout>
</ScrollView>
